--- a/select_your_insurance.html
+++ b/select_your_insurance.html
@@ -6,21 +6,116 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <meta name="keyword" content="แสงทอง, ประกันรถ, ประกันรถยนต์, xitdyoi5, ประกันเบ็ดเตล็ด, ประกันภัยโรงงาน, ประกันภัยทรัพย์สิน">
     <title>Saengthong Broker</title>
-    <style>
+  <style>
+        header {
+            padding-top: 3%;
+            padding-left: 40%;
+        }
+        #stbhead {
+            font-size: 50px;
+            color: gold;
+            padding-right: 15px;
+        }
+        #bgbody {
+            background-color: skyblue;
+        }
+        #logo {
+            padding-right: 10px;
+        }
+        .container {
+            padding-left:15px;
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+}
+        .container .btn {
+    position: absolute;
+    bottom: 1%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+}
+.container .btnlayout{
+                width: 100%;
+            }
+.container .btn:hover {
+    background-color: black;
+}
+
         @media screen and (max-width: 768px) {
-
-
-
-
+            header {
+                padding-top: 3%;
+                padding-left: 10%;
+            }
+            #stbhead {
+                font-size: 25px;
+                color: gold;
+                position: absolute;
+                margin-top: 5%;
+            }
+            #logo {
+                left: 50%;
+                width: 60px;
+                height: 60px;
+                padding-right: 5px;
+            }
+            .makeinline {
+                display: inline;
+            }
+            .container .btnlayout{
+                width: 50%;
+            }
+            .container {
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+}
+        .container .btn {
+    position: absolute;
+    bottom: 1%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 10px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    text-align: center;
+}
         }
     </style>
 </head>
-<body>
+
+<body id="bgbody">
     <header>
 
-        
+        <span>
+            <img id="logo" src="C:\Users\Wachirawit\Desktop\STB\font-end_STB\STB's_logo/stblogo.png">
+        </span>
+        <h id="stbhead"> Saengthong Broker </h>
     </header>
-
+    <br><br>
+    <div class="container">
+        <img class="btnlayout" src="C:\Users\Wachirawit\Desktop\STB\font-end_STB\STB's_logo/stblogo.png" alt="ประกันรถยนตร์" >
+        <button type="button" class="btn">ประกันรถยนตร์</button>
+    </div>
+    <div class="container">
+            <img class="btnlayout" src="C:\Users\Wachirawit\Desktop\STB\font-end_STB\STB's_logo/stblogo.png" alt="ประกันรถยนตร์" >
+            <button type="button" class="btn">ประกันโรงงาน</button>
+        </div>
+   
 
 </body>
+
 </html>
