--- a/car_home.html
+++ b/car_home.html
@@ -1,14 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <meta name="keyword" content="แสงทอง, ประกันรถ, ประกันรถยนต์, xitdyoi5, ประกันเบ็ดเตล็ด, ประกันภัยโรงงาน, ประกันภัยทรัพย์สิน">
-    <title>ประกันรถยนต์ แสงทองโบรคเกอร์</title>
+
+    <link rel="stylesheet" type="text/css" href="car_home.css">
 
 </head>
-<body>
 
+<body>
+    <header>
+        <div>
+            <h1 class="center">
+                <img class="logo" src="C:\Users\Wachirawit\Desktop\STB\font-end_STB\STB's_logo\stblogo.png" title="Saengthong Broker"
+                />Saengthong Broker</h1>
+        </div>
+    </header>
+    <div class="navbar">
+        <a href='https://www.google.com/'>หน้าแรก
+            <a>
+                <a href='https://www.google.com/'>สาระน่ารู้
+                    <a>
+                        <a href='https://www.google.com/'>โปรโมชั่น
+                            <a>
+                                <a href='https://www.google.com/'>ซื้อบริการ
+                                    <a>
+                                        <div class="dropdown">
+                                            <button class="dropbtn" >ประกันภัยอื่นๆ</button>
+                                            <div class="dropdown-content" >
+                                                <a href="#">ประกันภัยโรงงาน</a>
+                                                <a href="#">ประกันภัยทรัพย์สิน</a>
+                                                <a href="#">ประกันเบ็ดเตล็ด</a>
+                                            </div>
+
+                                        </div>
+                                        <a href='https://www.google.com/'>ติดต่อเรา
+                                            <a>
+    </div>
 </body>
+<footer class="center">
+
+    <img class="smalllogo" src="C:\Users\Wachirawit\Desktop\STB\font-end_STB\STB's_logo\stblogo.png" title="Saengthong Broker"
+    />
+    <br/>
+    <div>
+        <p class="concept">ราคาดี มีโปรปัง ทำประกันกับแสงทอง</p>
+    </div>
+    <p>
+        ที่ตั้งสำนักงาน : บ้านเลขที่ 1 ซอยบางกระดี่ 1แยก 10
+        <br/> แขวงแสมดำ เขตบางขุนเทียน กรุงเทพมหานคร 10150
+        <strong>เบอร์ติดต่อ: 02-896-2820</strong>
+    </p>
+
+    <div>
+        <!--logo our partner-->
+    </div>
+</footer>
+
 </html>
