--- a/car_home.html
+++ b/car_home.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
     <meta name="keyword" content="แสงทอง, ประกันรถ, ประกันรถยนต์, xitdyoi5, ประกันเบ็ดเตล็ด, ประกันภัยโรงงาน, ประกันภัยทรัพย์สิน">
-
+    
+    <title>ประกันรถยนต์ แสงทองโบรคเกอร์</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="car_home.css">
 
 </head>
@@ -13,12 +15,12 @@
 <body>
     <header>
         <div>
-            <h1 class="center">
+            <h1 class=" w3-container w3-center w3-animate-left">
                 <img class="logo" src="C:\Users\Wachirawit\Desktop\STB\font-end_STB\STB's_logo\stblogo.png" title="Saengthong Broker"
                 />Saengthong Broker</h1>
         </div>
     </header>
-    <div class="navbar">
+    <div class="navbar w3-animate-right">
         <a href='https://www.google.com/'>หน้าแรก
             <a>
                 <a href='https://www.google.com/'>สาระน่ารู้
@@ -40,7 +42,7 @@
                                             <a>
     </div>
 </body>
-<footer class="center">
+<footer class="center w3-animate-bottom">
 
     <img class="smalllogo" src="C:\Users\Wachirawit\Desktop\STB\font-end_STB\STB's_logo\stblogo.png" title="Saengthong Broker"
     />
