did opacity next: adjust pic's size

--- a/car_home.html
+++ b/car_home.html
@@ -56,8 +56,20 @@
         <strong>เบอร์ติดต่อ: 02-896-2820</strong>
     </p>
 
-    <div>
-        <!--logo our partner-->
+    <div class="opacity">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Krungthep.png" title = "Krungthep insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Akanay.png" title = " Akanay insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Asia.png" title = " Asia insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Kumphai.png" title = " Kumphai insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\LMG.png" title = " LMG insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Muangthai.png" title = " Muangthai insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Phoenix.png" title = " Phoenix insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Sinmunkhong.png" title = " Sinmunkhong insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Sinsup.png" title = " Sinsup insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Thaiphaibul.png" title = " Thaiphaibul insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Tipayah.png" title = " Tipayah insuarance">
+        <img src = "C:\Users\Wachirawit\Desktop\STB\font-end_STB\insurance's partner-pic\Viriyah.png" title = " Viriyah insuarance">
+\   
     </div>
 </footer>
 
